# zapata

./: .build  .bump  .clang-format  .gitignore  .packages.rc  .repo  .travis.yml  .unittests.rc  AUTHORS  CMakeLists.txt  COPYING  Dockerfile  LICENSE  Makefile  Makefile.am  Makefile.in  README.md  applications.cpp  clang-tidy.md  configure  configure.ac
auth/: .zpt_rc  Makefile.am  README.md  configure.ac
auth/debian/: changelog  control
auth/etc/: Makefile.am
auth/include/: Makefile.am
auth/include/zapata/: auth.h  config.h  mongodb.h
auth/src/api/: Makefile.am  oauth2.cpp  rfc6750.txt
auth/src/zapata-auth/: AuthAgent.cpp  Makefile.am
auth/src/zapata-core/: zat
base/include/: Makefile.am
base/include/zapata/: base.h
bridges/base/: CMakeLists.txt  Makefile.am  configure.ac
bridges/base/debian/: changelog  control
bridges/base/include/: Makefile.am
bridges/base/src/: bridge.cpp  test.cpp
bridges/lua/: CMakeLists.txt  Makefile.am  configure.ac
bridges/lua/debian/: changelog  control
bridges/lua/include/: Makefile.am
bridges/lua/src/: lua.cpp  plugin.cpp  test.cpp
bridges/prolog/: CMakeLists.txt  Makefile.am  configure.ac
bridges/prolog/debian/: changelog  control
bridges/prolog/include/: Makefile.am
bridges/prolog/src/: plugin.cpp  test.cpp
bridges/python/: CMakeLists.txt  Makefile.am  README.md  configure.ac
bridges/python/debian/: changelog  control
bridges/python/include/: Makefile.am
bridges/python/src/: Makefile.am  plugin.cpp  python.cpp  test.cpp
common/allocator/: CMakeLists.txt  Makefile.am  configure.ac
common/allocator/debian/: changelog  control
common/allocator/include/: Makefile.am
common/base/: CMakeLists.txt  Makefile.am  configure.ac
common/base/debian/: changelog  install
common/base/include/: Makefile.am
common/base/src/: #convert.cpp#  .#convert.cpp  CastException.cpp  Exception.cpp  ExpectationException.cpp  NoAttributeNameException.cpp  NoMoreElementsException.cpp  SyntaxErrorException.cpp  allocator.cpp  ascii.cpp  base64.cpp  convert.cpp  expect.cpp  filesystem.cpp  html.cpp  info.cpp  log.cpp  manip.cpp  net.cpp  performative.cpp  send.cpp  sha1.cpp  sha256.cpp  sha512.cpp  spin_lock.cpp  test.cpp  test_allocator.cpp  url.cpp  usage.cpp  utf8.cpp
common/catalog/: CMakeLists.txt
common/catalog/src/: catalog.cpp  test.cpp
common/catalogue/: CMakeLists.txt
common/catalogue/src/: catalogue.cpp  plugin.cpp  test.cpp
common/events/: CMakeLists.txt  Makefile.am  configure.ac
common/events/debian/: changelog  control  rules
common/events/include/: Makefile.am
common/events/src/: dispatcher.cpp  test.cpp
common/globals/: CMakeLists.txt  Makefile.am  configure.ac
common/globals/debian/: changelog  control
common/globals/include/: Makefile.am  zaptaa
common/globals/src/: globals.cpp  test.cpp
common/graph/: CMakeLists.txt  Makefile.am  configure.ac
common/graph/debian/: changelog  control
common/lockfree/: CMakeLists.txt  Makefile.am  configure.ac
common/lockfree/debian/: changelog  control
common/lockfree/include/: Makefile.am
common/lockfree/src/: test.cpp
couchdb/: Makefile.am  configure.ac
couchdb/debian/: changelog  control  copyright
couchdb/include/zapata/: couchdb.h
couchdb/src/couchdb/: Client.cpp  Makefile.am  convert_couchdb.cpp
cpp/: Doxyfile  (+1 more)
engines/automaton/: CMakeLists.txt  COPYING  Makefile.am  configure.ac
engines/automaton/debian/: changelog  control
engines/automaton/include/: Makefile.am
engines/automaton/src/: automaton.cpp  plugin.cpp
engines/dom/: CMakeLists.txt  Makefile.am  configure.ac
engines/dom/debian/: changelog  control
engines/dom/include/: Makefile.am
engines/dom/src/: dom.cpp  test.cpp
engines/events/: CMakeLists.txt
engines/events/src/: engine.cpp  zpt.cpp
include/: Makefile.am  Makefile.in
include/zapata/: config.h  core.h  http.h  mongodb.h  net.h  rest.h  unconfig.h
include/zapata/api/: RESTPool.h  codes_users.h
include/zapata/auth/: AuthAgent.h
include/zapata/base/: assert.h  smart_ptr.bak  smart_ptr.h  str_map.bak  str_map.h
include/zapata/conf/: load.h
include/zapata/db/: convert_mongo.h
include/zapata/exceptions/: AssertionException.h  CastException.h  ClosedException.h  InterruptedException.h  NoAttributeNameException.h  NoHeaderNameException.h  ParserEOF.h  SyntaxErrorException.h
include/zapata/file/: manip.h
include/zapata/http/: HTTPObj.h  params.h  requester.h
include/zapata/json/: JSONObj.h
include/zapata/log/: log.h
include/zapata/mem/: usage.h
mariadb/: Makefile.am  README.md  configure.ac
mariadb/debian/: changelog  control
mariadb/include/: Makefile.am
oauth2/: Makefile.am  configure.ac
oauth2/debian/: changelog  control  rules
oauth2/include/: Makefile.am
redis/: Makefile.am  configure.ac
redis/debian/: changelog  control  rules
redis/include/: Makefile.am
rest/: Makefile.am  configure.ac
rest/debian/: changelog  control  install  rules
rest/etc/: Makefile.am
rest/include/: Makefile.am
users/: README.md  configure.ac
users/debian/: changelog  control
users/etc/: Makefile.am
users/include/: Makefile.am
zapata-core/: Makefile.am  Makefile.in
zapata-core/base/: assert.h  str_map.cpp
zapata-core/conf/: load.cpp
zapata-core/exceptions/: SyntaxErrorException.cpp
zapata-core/json/: JSONElement.cpp  JSONObj.h
zapata-core/log/: log.h
zapata-core/mail/: manip.h
zapata-core/parsers/: JSONLexerimpl.h
zapata-core/text/: ascii.cpp
zapata-core/zapata/: core.h
zapata-http/: Makefile.am  Makefile.in
zapata-http/debian/: changelog  control
zapata-http/http/: HTTPElement.cpp
zapata-http/parsers/: HTTPLexer.cpp  HTTPLexer.h  HTTPLexerimpl.h  HTTPTokenizer.cpp  HTTPTokenizer.h  HTTPTokenizerbase.h  HTTPTokenizerimpl.h  HTTPinc.h
zapata-mongodb/: Makefile.am  Makefile.in
zapata-mongodb/db/: convert_mongo.cpp  convert_mongo.h
zapata-mongodb/include/: Makefile.am
zapata-users/: Makefile.am  Makefile.in
zapata-users/api/: codes_users.h  users.cpp
zapata-users/etc/: Makefile.am
zapata-users/graphics/: logo_zapata.xcf
(+3737 files in other folders)
