lib_LTLIBRARIES = libzapata-core.la

libzapata_core_la_LIBADD = -lpthread

libzapata_core_la_CPPFLAGS = -std=c++0x

libzapata_core_la_SOURCES = ./base/smart_ptr.cpp ./base/str_map.cpp ./log/log.cpp ./thread/Job.cpp ./thread/JobServer.cpp ./mem/usage.cpp ./conf/load.cpp ./exceptions/InterruptedException.cpp ./exceptions/CastException.cpp ./exceptions/ParserEOF.cpp ./exceptions/AssertionException.cpp ./exceptions/NoAttributeNameException.cpp ./exceptions/SyntaxErrorException.cpp ./parsers/JSONLexer.cpp ./parsers/json.cpp ./parsers/JSONTokenizer.cpp ./parsers/JSONTokenizerLexer.cpp ./parsers/JSONParser.cpp ./file/info.cpp ./file/filesystem.cpp ./mail/send.cpp ./text/ascii.cpp ./text/html.cpp ./text/utf8.cpp ./text/manip.cpp ./text/url.cpp ./text/convert.cpp ./text/base64.cpp ./json/JSONArr.cpp ./json/JSONBool.cpp ./json/JSONStr.cpp ./json/JSONInt.cpp ./json/JSONDbl.cpp ./json/JSONElement.cpp ./json/JSONObj.cpp 

nobase_pkginclude_HEADERS = ./base/str_map.h ./base/smart_ptr.h ./base/assert.h ./log/log.h ./zapata/core.h ./thread/JobServer.h ./thread/Job.h ./mem/usage.h ./conf/load.h ./exceptions/CastException.h ./exceptions/SyntaxErrorException.h ./exceptions/ParserEOF.h ./exceptions/AssertionException.h ./exceptions/NoAttributeNameException.h ./exceptions/InterruptedException.h ./parsers/JSONLexerimpl.h ./parsers/JSONTokenizerbase.h ./parsers/JSONinc.h ./parsers/JSONParser.h ./parsers/JSONTokenizerLexer.h ./parsers/JSONLexerbase.h ./parsers/JSONLexer.h ./parsers/json.h ./parsers/JSONTokenizer.h ./parsers/JSONTokenizerimpl.h ./file/manip.h ./mail/manip.h ./text/convert.h ./text/manip.h ./text/html.h ./json/JSONObj.h 