
nobase_include_HEADERS = \
./zapata/base/expect.h \
./zapata/base/config.h \
./zapata/base/unconfig.h \
./zapata/exceptions/ExpectationException.h \
./zapata/exceptions/CastException.h \
./zapata/exceptions/ClosedException.h \
./zapata/exceptions/InterruptedException.h \
./zapata/exceptions/NoAttributeNameException.h \
./zapata/exceptions/NoHeaderNameException.h \
./zapata/exceptions/ParserEOF.h \
./zapata/exceptions/SyntaxErrorException.h \
./zapata/exceptions/NoMoreElementsException.h \
./zapata/file/manip.h \
./zapata/log/log.h \
./zapata/mail/manip.h \
./zapata/mem/usage.h \
./zapata/text/convert.h \
./zapata/text/html.h \
./zapata/text/manip.h \
./zapata/net/manip.h \
./zapata/base.h
